--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Secure login using Netlify Functions and Neon DB.",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2", <--- THIS LINE IS CRITICAL
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
